--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    
-
-
+    <div id="mainBox">
+        <div id="nav-section">
+           <div id="search-box"><input type="text" placeholder="Enter City Name"></div>
+           <div id="search-button"><button><i class="fa-solid fa-magnifying-glass"></i></button></div>
+        </div>
+    </div>
     <script src="first.js"></script>
 </body>
 </html>
