--- a/index.html
+++ b/index.html
@@ -10,10 +10,29 @@
 <body>
     <div id="mainBox">
         <div id="nav-section">
-           <div id="search-box"><input type="text" placeholder="Enter City Name"></div>
-           <div id="search-button"><button><i class="fa-solid fa-magnifying-glass"></i></button></div>
+           <input type="text" placeholder="Enter City Name">
+           <button><i class="fa-solid fa-magnifying-glass"></i></button>
+        </div>
+        <img id="img-1" src="./images-1/clouds.png">
+        <p id="temp">22°C</p>
+        <p id="city">New York</p>
+        <div id="last-two-image">
+            <div class="image-container">
+                <img id="img-2" src="./images-1/humidity.png">
+                <p id="humidity" class="text-below">50% </p>
+                <!-- <hr> -->
+                <p class="text-below">Humidity</p>
+            </div>
+            <div class="image-container">
+                <img id="img-3" src="./images-1/wind.png">
+                <p id="wind-speed" class="text-below">15 km/h </p>
+                <hr>
+                <p class="text-below">Wind Speed</p>
+            </div>
         </div>
     </div>
     <script src="first.js"></script>
 </body>
 </html>
+
+
