--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Weather App</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
@@ -13,20 +13,24 @@
            <input type="text" placeholder="Enter City Name">
            <button><i class="fa-solid fa-magnifying-glass"></i></button>
         </div>
-        <img id="img-1" src="./images-1/clouds.png">
+        <img id="img-1" src="./images-1/clouds.png" alt="weather">
         <p id="temp">22°C</p>
         <p id="city">New York</p>
+        <p id="description" class="text-below">Clear sky</p>
+        <div id="additional-info">
+            <p class="info-item">Pressure: <span id="pressure">1013 hPa</span></p>
+            <p class="info-item">Sunrise: <span id="sunrise">6:00 AM</span></p>
+            <p class="info-item">Sunset: <span id="sunset">8:00 PM</span></p>
+        </div>
         <div id="last-two-image">
             <div class="image-container">
-                <img id="img-2" src="./images-1/humidity.png">
-                <p id="humidity" class="text-below">50% </p>
-                <!-- <hr> -->
+                <img id="img-2" src="./images-1/humidity.png" alt="humidity">
+                <p id="humidity" class="text-below">50%</p>
                 <p class="text-below">Humidity</p>
             </div>
             <div class="image-container">
-                <img id="img-3" src="./images-1/wind.png">
-                <p id="wind-speed" class="text-below">15 km/h </p>
-                <hr>
+                <img id="img-3" src="./images-1/wind.png" alt="wind speed">
+                <p id="wind-speed" class="text-below">15 km/h</p>
                 <p class="text-below">Wind Speed</p>
             </div>
         </div>
@@ -34,5 +38,9 @@
     <script src="first.js"></script>
 </body>
 </html>
+
+
+
+
 
 
